--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ python-telegram-bot==20.6
 aiosignal==1.3.2
 certifi==2025.6.15
 charset-normalizer==3.4.2
-Flask==3.1.1
+Flask[async]==3.1.1
 flask-cors==6.0.1
 idna==3.10
 itsdangerous==2.2.0
